feat: make CORS allowed origins configurable via environment variable
Add CORS_ALLOWED_ORIGINS env var to configure allowed origins for production deployment.
Default: localhost:3000,5173,5174 for development.